tests/compile_fail/try_from/struct.stderr
error: `TryFrom` cannot be derived for structs
 --> tests/compile_fail/try_from/struct.rs:2:1
  |
2 | struct Struct;
  | ^^^^^^
